Editorial review ahead of 2.5 updates

--- a/stories/assembly-azure-install-prerequisites.adoc
+++ b/stories/assembly-azure-install-prerequisites.adoc
@@ -11,7 +11,7 @@ ifdef::context[:parent-context-of-assembly-azure-install-prerequisites: {context
 
 * A subscription for Microsoft Azure.
 * Contributor or Administrator access to that Azure subscription.
-* Access to the Azure CLI.
+* Access to the Azure comand line interface (CLI).
 
 == {PlatformNameShort} requirements
 
