--- a/stories/topics/con-azure-security.adoc
+++ b/stories/topics/con-azure-security.adoc
@@ -9,11 +9,11 @@ The following resources describe the security posture of the application and the
 ** link:https://learn.microsoft.com/en-us/azure/security/fundamentals/encryption-atrest#azure-storage[All Azure Storage Services enable server-side encryption by default using service-managed keys]
 ** link:https://learn.microsoft.com/en-us/azure/security/fundamentals/encryption-atrest#conclusion[All Azure hosted services are committed to providing Encryption at Rest options]
 ** link:https://learn.microsoft.com/en-us/azure/security/fundamentals/encryption-overview[Azure encryption overview]
-** All communications between services within AKS (for example, {PlatformNameShort}, Postgres, storage accounts) use TLS v1.2 or higher.
+** All communications between services within Azure Kubernetes Service (AKS) (for example, {PlatformNameShort}, Postgres, storage accounts) use Transport Layer Security (TLS) v1.2 or higher.
 ** link:https://learn.microsoft.com/en-us/security/benchmark/azure/baselines/azure-kubernetes-service-aks-security-baseline[Azure security baseline for Azure Kubernetes Service (AKS)]
 * Password storage
 ** The customer-supplied {PlatformNameShort} admin password is encrypted in transit.
-It is accessible to SREs from the kubernetes API and can be reset by the SREs upon customer request.
+It is accessible to site reliability engineers (SREs) from the Kubernetes API and can be reset by the SREs upon customer request.
 * Keys generated with industry standards
 ** link:https://learn.microsoft.com/en-us/azure/security/fundamentals/encryption-overview#azure-storage-service-encryption[Data in Azure Storage is encrypted and decrypted transparently using 256-bit AES encryption, one of the strongest block ciphers available, and is FIPS 140-2 compliant]
 * Key installation, rotation
