--- a/stories/topics/proc-azure-create-service-principal.adoc
+++ b/stories/topics/proc-azure-create-service-principal.adoc
@@ -7,9 +7,12 @@ To enable the {PlatformNameShort} application to access and manage Azure resourc
 The Microsoft Azure collection supports service principal authentication.
 
 To create a service principal, you must have administrator privileges with tenancy-wide permissions on your Azure tenant.
-Your {AAPonAzureNameShort} deployment will be provisioned in the same Subscription ID as the service principal created in this step.
+Your {AAPonAzureNameShort} deployment provisions in the same Subscription ID as the service principal created in this step.
 
-. Navigate to the Azure portal and click the link:https://docs.microsoft.com/en-us/azure/cloud-shell/overview[Cloud Shell] icon to open a bash Cloud Shell in your browser.
+.Procedure
+
+. Navigate to the Azure portal
+. Click the link:https://docs.microsoft.com/en-us/azure/cloud-shell/overview[Cloud Shell] icon to open a bash Cloud Shell in your browser.
 . Set the Azure CLI to use the subscription that you intend to use for automating Azure services. Run the following command from the shell:
 +
 -----
