--- a/stories/topics/proc-azure-locate-aap-marketplace.adoc
+++ b/stories/topics/proc-azure-locate-aap-marketplace.adoc
@@ -2,12 +2,15 @@
 
 = Locating {PlatformNameShort} in Azure Marketplace
 
+Before you can start provisioning your {AAPonAzureNameShort}, you must find the offering on the Azure marketplace, enable your subscription, and initiate a deployment. 
+
 // [role="_abstract"]
 
+.Procedure 
 
 . In a browser, navigate to the Azure Marketplace.
 . Click *Private Products* from the menu on the left of the screen.
-. Search for {PlatformName}.
+. Search for "{PlatformName}".
 . Click the card that is returned in the search. Be sure to select the official offering from Red Hat.
 . Click  btn:[Get it Now].
 . Click btn:[Continue].
