--- a/stories/topics/proc-azure-monitor-deployment-engine.adoc
+++ b/stories/topics/proc-azure-monitor-deployment-engine.adoc
@@ -10,6 +10,8 @@ You can monitor the progress of the deployment, restart failed deployment steps,
 When you begin deploying {AAPonAzureNameShort}, the Azure interface displays the *Overview* page for the deployment.
 The *Overview* page displays the deployment status.
 
+.Procedure
+
 . When the status in the *Overview* page shows "Your deployment is complete", navigate to the deployed managed application.
 . Click *Parameters and Outputs* in the *Settings* menu for the deployed managed application.
 +
