--- a/stories/topics/proc-azure-peer-vwan-hub-to-aap.adoc
+++ b/stories/topics/proc-azure-peer-vwan-hub-to-aap.adoc
@@ -17,7 +17,7 @@ Before peering, you must connect a hub network, and at least one spoke network, 
 . Navigate to the *Virtual Network Connections* page for the VWAN that you want to peer with your {PlatformNameShort} instance.
 . To create a connection between the VWAN hub and your {PlatformNameShort} instance, use the following settings:
 ** *Connection Name*: _<Ansible_Automation_Platform_connection_name>_
-** *Hubs*: Select one or more VWAN hub networks that the managed application VNet will peer with.
+** *Hubs*: Select one or more VWAN hub networks that the managed application VNet peers with.
 ** *Subscription*: Select the subscription where {AAPonAzureNameShort} has been deployed.
 ** *Resource group*: The managed resource group of the managed application. It is typically prefixed with “mrg-”.
 ** *Virtual network*: The VNet of the managed application. There is only one VNet in the managed resource group.
