--- a/stories/topics/proc-azure-resource-quotas.adoc
+++ b/stories/topics/proc-azure-resource-quotas.adoc
@@ -5,11 +5,11 @@
 Microsoft imposes resource limits within each Azure region. The CPU limit is the most likely to impact {AAPonAzureName}.
 
 Before you install {AAPonAzureNameShort}, ensure that you have capacity to deploy the managed application into your desired region.
-Refer to xref:con-azure-infrastructure-usage_azure-intro[Azure infrastructure usage] for infrastructure requirements.
+Refer to xref:con-azure-infrastructure-usage_azure-intro[Ansible Automation Platform on Microsoft Azure infrastructure usage] for infrastructure requirements.
 
 == Regional vCPU limits
 
-The Azure resources used during the deployment of the managed application temporarily exceed the resource requirements in xref:con-azure-infrastructure-usage_azure-intro[Azure infrastructure usage].
+The Azure resources used during the deployment of the managed application temporarily exceed the resource requirements in xref:con-azure-infrastructure-usage_azure-intro[Ansible Automation Platform on Microsoft Azure infrastructure usage].
 The `Total Regional vCPUs` quota is temporarily consumed when deploying the managed application.
 
 Every Azure region has a separate `Total Regional vCPUs` quota.
@@ -19,7 +19,7 @@ The following steps describe how to view the resource quotas for your subscripti
 
 . In the Azure console, search for *Quotas* and open the *My Quotas* page.
 . Select the region where you wish to deploy the managed application to view your allocation and usage metrics for that region.
-Ensure that you have selected a single region. Viewing all regions at once will not show the limitations of a single Azure region.
+Ensure that you have selected a single region. Viewing all regions at once does not show the limitations of a single Azure region.
 
 == Regional StandardCore limits
 
