--- a/stories/topics/proc-azure-update-route-tables.adoc
+++ b/stories/topics/proc-azure-update-route-tables.adoc
@@ -2,7 +2,7 @@
 
 = Updating the route tables
 
-Before you update the route tables, confirm that you satisfy the xref:proc-azure-hub-spoke-peering_azure-hub-spoke-peering[prerequisites] for the hub-and-spoke peering process.
+Before you update the route tables, confirm that you satisfy the xref:proc-azure-hub-spoke-peering_azure-hub-spoke-peering[Prerequisites] for the hub-and-spoke peering process.
 
 [#routing-to-aap]
 .Routing to {AAPonAzureNameShort}
@@ -58,7 +58,7 @@ If you choose not to allow all outbound traffic from  port 443, you must configu
 Add routes in the {PlatformNameShort} route table for outbound traffic from the full CIDR range of the {AAPonAzureNameShort} managed application to the domains listed in the link:https://access.redhat.com/articles/6972355[Azure Virtual Appliance Routing with Ansible Automation Platform on Azure] article on the Red Hat Customer Portal.
 
 * You must also allow traffic from your firewall to any other external domain or IP address that you want {PlatformNameShort} to run automation jobs against.
-Otherwise, your firewall will block connectivity between {PlatformNameShort} and destinations for automation.
+Otherwise, your firewall blocks connectivity between {PlatformNameShort} and destinations for automation.
 
 * {PlatformNameShort} requires a public DNS zone to provide SSL certificates.
 This public DNS zone is in the managed resource group of the deployment.
