--- a/stories/assembly-azure-network-peering.adoc
+++ b/stories/assembly-azure-network-peering.adoc
@@ -5,13 +5,13 @@ ifdef::context[:parent-context: {context}]
 
 :context: azure-install
 
-{AAPonAzureNameShort} is deployed into an independent managed resource group with its own Azure virtual network (VNet).
+You deploy {AAPonAzureNameShort} into an independent managed resource group with its own Azure virtual network (VNet).
 
-When initially deployed, {AAPonAzureNameShort}’s VNet can only send requests to external networks through the public internet.
+Initially when you deploy, {AAPonAzureNameShort}’s VNet you can only send requests to external networks through the public internet.
 
-To enable {AAPonAzureNameShort} to access resources in an internet-gapped deployment, when access to resources has to happen over private networks, you must configure Azure network peering between your private virtual networks and {AAPonAzureName}’s managed application VNet.
+To enable {AAPonAzureNameShort} to access resources in an internet-gapped deployment, over private networks, configure Azure network peering between your private virtual networks and {AAPonAzureName}’s managed application VNet.
 
-You can configure your Azure VNets to enable private communication between multiple Azure VNets as well as private transit routing between Azure VNets and external VPN routed networks. These VPN networks can be on-premises or on other clouds.
+You can configure your Azure VNets for private communication between multiple Azure VNets and private transit routing between Azure VNets and external VPN routed networks. These VPN networks can be on-premises or on other clouds.
 
 No two Azure networking configurations are the same. To enable user access to {AAPonAzureNameShort}, work with your Azure administrators to connect your deployment to your VNets and external VPN routed networks.
 
