--- a/stories/topics/con-azure-aks-cidr.adoc
+++ b/stories/topics/con-azure-aks-cidr.adoc
@@ -3,7 +3,7 @@
 = AKS CIDR Blocks
 
 You can configure the AKS network CIDR blocks.
-Traffic that originates from the AKS cluster will appear to come from the range configured in AKS, not from the VNET.
+Traffic that originates from the AKS cluster appears to come from the range configured in AKS, not from the VNET.
 
 When you are planning your AKS CIDR block configuration, bear the following in mind:
 
