--- a/stories/topics/con-azure-architecture.adoc
+++ b/stories/topics/con-azure-architecture.adoc
@@ -5,18 +5,18 @@
 {AAPonAzureName} is installed as a managed application.
 Red Hat manages both the underlying Azure resources and the software running on it while that infrastructure runs in your Azure tenant.
 
-The managed application resource group is completely separate from other resource groups in your tenant.
-Red Hat only has access to the managed application resource group, with no visibility into other tenant resources.
+The managed application resource group (RG) is completely separate from other RGs in your tenant.
+Red Hat only has access to the managed application RG, with no visibility into other tenant resources.
 
 For information about how this works and how resources and access are isolated from the rest of your Azure resources, refer to link:https://docs.microsoft.com/en-us/azure/azure-resource-manager/managed-applications/overview[Azure managed applications overview] in the Microsoft _Azure managed applications_ guide.
 
-{AAPonAzureNameShort} uses the following resource groups:
+{AAPonAzureNameShort} uses the following RGs:
 
-* A new or existing resource group (RG) in your tenant.
-This resource group includes a single resource referring to the {AAPonAzureNameShort} managed application deployment.
-Red Hat has access to the managed app to perform support, maintenance, and upgrades, but the resource group is outside of Red Hat's management.
+* A new or existing RG in your tenant.
+This RG includes a single resource referring to the {AAPonAzureNameShort} managed application deployment.
+Red Hat has access to the managed app to perform support, maintenance, and upgrades, but the RG is outside of Red Hat's management.
 * A multi-tenant managed resource group (MRG) that contains most of the infrastructure needed to operate {AAPonAzureNameShort}.
-This multi-tenant resource group is shared between the Red Hat tenant and your tenant. Red Hat has full administrative control and you have read-only access to the resource group.
+This multi-tenant MRG is shared between the Red Hat tenant and your tenant. Red Hat has full administrative control and you have read-only access to the RG.
 * An AKS node pool resource group (NPRG).
 Microsoft requires the NPRG for AKS deployments. It contains resources that AKS uses to function.
 It is created on deployment, and it is outside of Red Hat's management.
@@ -24,7 +24,7 @@ Refer to link:https://docs.microsoft.com/en-us/azure/aks/faq#why-are-two-resourc
 
 [NOTE]
 ====
-Do not interact with any resources in the node pool resource group (NPRG) unless explicitly directed to by the {AAPonAzureName} SRE team.
+Do not interact with any resources in the NPRG unless explicitly directed to by the {AAPonAzureName} SRE team.
 Changes to resources in the NPRG cannot be protected by Red Hat and can cause irrecoverable damage to the application.
 
 Red Hat cannot restrict your ability to change or delete resources in the NPRG.
