--- a/stories/topics/con-azure-disaster-recovery.adoc
+++ b/stories/topics/con-azure-disaster-recovery.adoc
@@ -6,7 +6,7 @@ When you deploy {AAPonAzureNameShort}, you must enable or disable disaster recov
 There is no default setting for disaster recovery.
 
 The disaster recovery feature incurs additional Azure infrastructure costs.
-See xref:con-azure-infrastructure-usage_azure-intro[Azure infrastructure usage] for details of the Service Shape of the Storage account.
+See xref:con-azure-infrastructure-usage_azure-intro[Ansible Automation Platform on Microsoft Azure infrastructure usage] for details of the Service Shape of the Storage account.
 
 If you want to enable disaster recovery on an existing instance of {AAPonAzureNameShort}, contact Red Hat customer support.
 
