--- a/stories/topics/con-azure-private-access.adoc
+++ b/stories/topics/con-azure-private-access.adoc
@@ -6,13 +6,13 @@ A private deployment of {PlatformNameShort} resides in an isolated Azure VNet wi
 
 To access the URLs for the {PlatformNameShort} user interfaces, you must configure network peering.
 
-Once peering and routing are configured, users can access {PlatformNameShort} through a VM on a connected Azure subnet, or directly if your organization has transit routing set up between Azure and your local network.
+Once peering and routing are configured, you can access {PlatformNameShort} through a VM on a connected Azure subnet, or directly if your organization has transit routing set up between Azure and your local network.
 
 
 [NOTE]
 ====
 No two Azure networking configurations are the same.
-To allow user access to your {PlatformNameShort} URLs, your organization will need to work with your Azure administrators to connect the private access deployment.
+To allow user access to your {PlatformNameShort} URLs, your organization needs to work with your Azure administrators to connect the private access deployment.
 ====
 
 The following diagram outlines the application resources and architecture that are deployed into the managed application resource group on a private deployment of {AAPonAzureNameShort} into your Azure subscription.
