--- a/stories/topics/proc-azure-accessing-aap.adoc
+++ b/stories/topics/proc-azure-accessing-aap.adoc
@@ -3,8 +3,10 @@
 = Accessing {AAPonAzureName}
 
 [role="_abstract"]
-When you initiate the deployment of the {PlatformName} managed app from Azure marketplace, a form is displayed in the *Create Red Hat Ansible Automation Platform on Microsoft Azure* window.
+When you initiate the deployment of the {PlatformName} managed app from Azure marketplace, a form displays in the *Create Red Hat Ansible Automation Platform on Microsoft Azure* window.
 Complete the form to provision {PlatformNameShort} infrastructure and resources into your Azure tenant.
+
+.Procedure
 
 . In a web browser, navigate to *Managed Applications* in the Azure console.
 . Select the instance of {AAPonAzureName} that you deployed.
