--- a/stories/topics/proc-azure-configure-ad-sso.adoc
+++ b/stories/topics/proc-azure-configure-ad-sso.adoc
@@ -3,7 +3,7 @@
 = {MSEntraID} SSO configuration
 
 [role="_abstract"]
-Follow the procedures below to configure SSO with {MSEntraID}. If your organization does not use {MSEntraID} for application authorization, you can create users in the user management system in {PlatformNameShort}.
+Follow the procedures below to configure single sign-on (SSO) with {MSEntraID} (formally known as Azure Active Directory). If your organization does not use {MSEntraID} for application authorization, you can create users in the user management system in {PlatformNameShort}.
 
 .Configuring the base URL for the {PlatformNameShort} deployment
 
@@ -49,7 +49,7 @@ When registration is complete, the registration page for the Automation Controll
 
 . In the *Automation controller application registration page* on Azure, copy and save the value of _Application (client) ID_.
 +
-You will use this value for the _{MSEntraID}OAuth2 Key_ in the {PlatformNameShort} settings.
+You need this value for the _{MSEntraID}OAuth2 Key_ in the {PlatformNameShort} settings.
 . Under *Manage*, click *Certificates & secrets*.
 . Click *Client secrets* and then *+ New client secret*.
 . Provide a description for the new secret.
@@ -60,7 +60,7 @@ It is useful to include the date in the description, for example: _AAP Client Se
 . Provide an expiration date for the new secret.
 +
 The maximum lifetime for the certificate is 2 years. Unless you have specific security needs that prevent the creation of a long term certificate, select an expiration date of *24 months*.
-. Save the secret _Value_ to a location on your local machine. Once you navigate away from this page it will be hidden and no longer retrievable.
+. Save the secret _Value_ to a location on your local machine. After you navigate away from this page the secret value is no longer retrievable.
 
 .Adding secrets to {PlatformNameShort} settings
 
@@ -83,7 +83,7 @@ Add the key _(Application (client) ID)_ and value (_Value_) of the secret that y
 . Enter a name for the new credential and select *Azure Resource Manager* for the credential type.
 . Use the Service Principal details to fill out the values of the form:
   * *Name*: Choose a descriptive name for the credential, for example _*Azure Infrastructure*_.
-  * *Subscription ID*: Enter the subscription id where your resources created in Azure should be associated. This is unique to your tenant. Your organization may have multiple subscription ids; consult your Azure administrator regarding the subscription id that you should use.
+  * *Subscription ID*: Enter the subscription ID where your resources created in Azure are associated. This is unique to your tenant. Your organization may have multiple subscription IDs; consult your Azure administrator regarding the subscription ID that you must use.
   * *Client ID*: Enter the appId value from the Service Principal creation.
   * *Client Secret*: Enter the password from the Service Principal creation.
   * *Tenant ID*: Enter the tenant from the Service Principal creation.
