--- a/stories/topics/proc-azure-hub-spoke-peering.adoc
+++ b/stories/topics/proc-azure-hub-spoke-peering.adoc
@@ -8,8 +8,8 @@
 * You have configured and tested an Azure VNet hub-and-spoke implementation in your Azure tenant. This prerequisite requires many Azure resources to be configured, including a Virtual Network Gateway.
 * You have configured transit routing between your spoke networks, including your VPNs. Refer to link:https://docs.microsoft.com/en-us/azure/vpn-gateway/vpn-gateway-peering-gateway-transit[Configure VPN gateway transit for virtual network peering] in the Microsoft Azure documentation for instructions.
 * You have identified the following:
-** The CIDR block(s) of your existing VNets (including VPNs & direct connects) that will need access to {AAPonAzureNameShort} UIs.
-** The CIDR block(s) of your existing VNets (including VPNs & direct connects) that will contain hosts or endpoints for Ansible automation.
+** The CIDR blocks of your existing VNets (including VPNs and direct connects) that need access to {AAPonAzureNameShort} UIs.
+** The CIDR blocks of your existing VNets (including VPNs and direct connects) that  contain hosts or endpoints for {AAPonAzureNameShort}.
 ** The CIDR blocks of the {AAPonAzureNameShort} VNet from the managed resource group of the application. Refer to xref:proc-azure-find-cluster-cidr_azure-hub-spoke-peering[Finding the CIDR Block of the managed resource group] for instructions.
 
 Before peering any networks, ensure that there is no network address space overlap between your private VNets and your {AAPonAzureNameShort} network.
