--- a/stories/topics/proc-azure-nw-direct-peering.adoc
+++ b/stories/topics/proc-azure-nw-direct-peering.adoc
@@ -16,7 +16,7 @@ In the *Virtual Networks* page in the Azure portal, use the following settings t
 
 * Under *Remote virtual network*, select settings for the virtual network that you want to peer with Azure:
 ** *Peering link name*: _<aap_to_hub_peering_link_name>_
-** *Subscription*: Select the subscription where {AAPonAzureNameShort} has been deployed
+** *Subscription*: Select the subscription where you deployed {AAPonAzureNameShort}
 ** *Virtual network*: Select the {AAPonAzureNameShort} virtual network: vnet-<aap_identifier>-<region>
 ** *Traffic to remote virtual network*: _Allow_
 ** *Traffic forwarded from remote virtual network*: _Allow_
