--- a/stories/topics/proc-azure-provisioning-aap.adoc
+++ b/stories/topics/proc-azure-provisioning-aap.adoc
@@ -17,22 +17,24 @@ xref:con-azure-network_azure-install-prerequisites[Network].
 
 Complete the form to provision {PlatformName} infrastructure and resources into your Azure tenant.
 
+.Procedure
+
 . Click the *Basics* tab and enter values for your deployment in the following fields in the form:
   * *Subscription*: Select *Ansible on Clouds*.
   * *Resource Group*: Create or select a resource group where you want to deploy the managed application.
-  * *Region*: The Azure region where the application will be deployed.
+  * *Region*: The Azure region where the application is deployed.
   * *Application Name*: A unique name for the managed application.
   * *Administrator Password*: Create an adminstrator password for your deployment.
 +
 The _Administrator Password_ must contain at least 8 characters, and must include uppercase letters, lowercase letters, and numbers.
   * *Confirm Administrator Password*: Confirm the _Administrator Password_.
-  * *Access*: Choose whether your deployment will be public or private.
+  * *Access*: Choose whether your deployment is public or private.
   * *Managed Resource Group*: A resource group for the managed application infrastructure.
 +
 Keep this resource group isolated from other resource groups, including the _Resource Group_ where you will deploy the managed application.
-. Store the information that you entered in the form in a secure place. You will need to provide the _Administrator password_ to access {ControllerName} and private {HubName}.
+. Store the information that you entered in the form in a secure place. You must provide the _Administrator password_ to access {ControllerName} and private {HubName}.
 . Click btn:[Next]
-. Follow the steps in link:https://access.redhat.com/articles/6973251[Red Hat Ansible Automation Platform on Microsoft Azure VNet Preparation] to configure your network configuration.
+. Follow the steps in link:https://access.redhat.com/articles/6973251[Red Hat Ansible Automation Platform on Microsoft Azure Networking Preparation] to configure your network configuration.
 . Click btn:[Next].
 . Click the *Business continuity* tab.
 . From the *Disaster Recovery* list, select an option to enable or disable disaster recovery.
@@ -47,12 +49,12 @@ Keep this resource group isolated from other resource groups, including the _Res
 . Select *I agree* to accept the Co-Admin Access Permissions terms and conditions.
 . Click btn:[Create] to begin the provisioning process for the application.
 
-The application will begin provisioning.
+The application begins provisioning.
 
 You can use the deployment engine to view the progress of your deployment a few minutes after the Azure console displays "Your deployment is complete".
 See xref:azure-monitor-deployment-engine_azure-deploy[Monitoring deployments on the {PlatformNameShort} Deployment Engine] for more information.
 
 It may take 30 minutes or longer for the infrastructure and software to fully provision.
 
-Once provisioning is complete, you can access and login to your new {PlatformNameShort} instance and launch {ControllerName} and {HubName}.
+After provisioning is complete, you can access and login to your new {PlatformNameShort} instance and launch {ControllerName} and {HubName}.
 
