--- a/downstream/assemblies/platform/assembly-appendix-troubleshoot-containerized-aap.adoc
+++ b/downstream/assemblies/platform/assembly-appendix-troubleshoot-containerized-aap.adoc
@@ -3,6 +3,7 @@
 
 Use this information to troubleshoot your containerized {PlatformNameShort} installation.
 
+include::platform/ref-containerized-troubleshoot-diagnosing.adoc[leveloffset=+1]
 include::platform/ref-containerized-troubleshoot-install.adoc[leveloffset=+1]
 include::platform/ref-containerized-troubleshoot-config.adoc[leveloffset=+1]
 include::platform/ref-containerized-troubleshoot-ref.adoc[leveloffset=+1]
