--- a/downstream/titles/release-notes/async/aap-25-4-20-nov.adoc
+++ b/downstream/titles/release-notes/async/aap-25-4-20-nov.adoc
@@ -6,7 +6,7 @@ The following enhancements and bug fixes have been implemented in this release o
 
 == Enhancements
 
-* With this release, a redirect page has now been implemented that will be exhibited when you navigate to the root ``/`` for each component's stand-alone URL. The API endpoint remains functional. This affects {EDAName}, {ControllerName}, {OperatorPlatformNameShort}, and {OCPShort}.
+* With this release, a redirect page has now been implemented that will be exhibited when you navigate to the root `/` for each component's stand-alone URL. The API endpoint remains functional. This affects {EDAName}, {ControllerName}, {OperatorPlatformNameShort}, and {OCPShort}.
 
 
 == Bug fixes
