--- a/downstream/titles/release-notes/async/aap-25-4-20-nov.adoc
+++ b/downstream/titles/release-notes/async/aap-25-4-20-nov.adoc
@@ -17,7 +17,7 @@ With this update, the following CVEs have been addressed:
 
 link:https://access.redhat.com/security/cve/cve-2024-9902[CVE-2024-9902] ansible-core: Ansible-core user may read/write unauthorized content.
 
-link:https://access.redhat.com/security/cve/cve-2024-8775[CVE-2024-8775] ansible-core: Exposure of sensitive Information in Ansible vault files due to Improper logging.
+link:https://access.redhat.com/security/cve/cve-2024-8775[CVE-2024-8775] ansible-core: Exposure of sensitive information in Ansible vault files due to improper logging.
 
 
 === {PlatformNameShort}
