--- a/downstream/titles/release-notes/async/aap-25-4-20-nov.adoc
+++ b/downstream/titles/release-notes/async/aap-25-4-20-nov.adoc
@@ -36,7 +36,7 @@ link:https://access.redhat.com/security/cve/cve-2024-8775[CVE-2024-8775] ansible
 
 * Added the ability to set tolerations and `node_selector` for the Redis *statefulset* and the gateway deployment.
 
-* Ensure the platform URL status is set when *Ingress* is used to resolve an issue with {Azure} on Cloud managed deployments, where the {PlatformNameShort} operator fails to finish because it is looking for {OCPShort} routes that are not available on Azure Kubernetes Service.
+* Ensure the platform URL status is set when *Ingress* is used to resolve an issue with {Azure} on Cloud managed deployments. This is due to the {PlatformNameShort} operator failing to finish because it is looking for {OCPShort} routes that are not available on Azure Kubernetes Service.
 
 * Fixed an issue where the default operator catalog for {PlatformNameShort} aligns to cluster-scoped versus namespace-scoped.
 
