--- a/downstream/titles/release-notes/async/aap-25-4-20-nov.adoc
+++ b/downstream/titles/release-notes/async/aap-25-4-20-nov.adoc
@@ -46,7 +46,7 @@ link:https://access.redhat.com/security/cve/cve-2024-8775[CVE-2024-8775] ansible
 
 * It is necessary to set the `SERVICE_BACKED_SSO_AUTH_CODE_REDIRECT_URL` setting to fix the OIDC auth redirect flow.
 
-=== Container-based {PlatformNameShort}
+=== {ContainerBase} {PlatformNameShort}
 
 * Fixed an issue when the port value is not defined in the `gateway_main_url` variable, the containerized installer fails with incorrect {ExecEnvShort} image reference error.
 
