--- a/downstream/titles/release-notes/async/aap-25-4-20-nov.adoc
+++ b/downstream/titles/release-notes/async/aap-25-4-20-nov.adoc
@@ -22,7 +22,7 @@ link:https://access.redhat.com/security/cve/cve-2024-8775[CVE-2024-8775] ansible
 
 === {PlatformNameShort}
 
-* Fixed an issue where the user was unable to filter out hosts on inventory groups where it returns a *Failed to load* options on {PlatformNameShort} UI.
+* Fixed an issue where the user was unable to filter out hosts on inventory groups where it returned a *Failed to load* options on {PlatformNameShort} UI.
 
 === Execution Environment
 
