--- a/downstream/titles/release-notes/async/aap-25-4-20-nov.adoc
+++ b/downstream/titles/release-notes/async/aap-25-4-20-nov.adoc
@@ -30,17 +30,15 @@ link:https://access.redhat.com/security/cve/cve-2024-8775[CVE-2024-8775] ansible
 
 === {OperatorPlatformNameShort}
 
-* Fixed a syntax error when `bundle_cacert_secret` is defined due to incorrect indentation.
+* Fixed a syntax error when `bundle_cacert_secret` was defined due to incorrect indentation.
 
-* Fixed an issue where the default operator catalog for {PlatformNameShort} aligns to cluster-scoped versus namespace-scoped.
+* Fixed an issue where the default operator catalog for {PlatformNameShort} aligned to cluster-scoped versus namespace-scoped.
 
 * Added the ability to set tolerations and `node_selector` for the Redis *statefulset* and the gateway deployment.
 
 * Ensure the platform URL status is set when *Ingress* is used to resolve an issue with {Azure} on Cloud managed deployments. This is due to the {PlatformNameShort} operator failing to finish because it is looking for {OCPShort} routes that are not available on Azure Kubernetes Service.
 
-* Fixed an issue where the default operator catalog for {PlatformNameShort} aligns to cluster-scoped versus namespace-scoped.
-
-* Fixed an issue where the {PlatformNameShort} Operator description does not render code block correctly.
+* Fixed an issue where the {PlatformNameShort} Operator description did not render code block correctly.
 
 * It is necessary to specify the `CONTROLLER_SSO_URL` and `AUTOMATION_HUB_SSO_URL` settings in Gateway to fix the OIDC auth redirect flow.
 
@@ -48,9 +46,9 @@ link:https://access.redhat.com/security/cve/cve-2024-8775[CVE-2024-8775] ansible
 
 === {ContainerBase} {PlatformNameShort}
 
-* Fixed an issue when the port value is not defined in the `gateway_main_url` variable, the containerized installer fails with incorrect {ExecEnvShort} image reference error.
+* Fixed an issue when the port value was not defined in the `gateway_main_url` variable, the containerized installer failed with incorrect {ExecEnvShort} image reference error.
 
-* Fixed an issue where the containerized installer uses port number when specifying the `image_url` for a decision environment. The user should not add a port to image URLs when using the default value.
+* Fixed an issue where the containerized installer used port number when specifying the `image_url` for a decision environment. The user should not add a port to image URLs when using the default value.
 
 === RPM-based {PlatformNameShort}
 
