--- a/downstream/assemblies/builder/assembly-definition-file-breakdown.adoc
+++ b/downstream/assemblies/builder/assembly-definition-file-breakdown.adoc
@@ -4,7 +4,7 @@
 
 A definition file is required for building {ExecEnvName} with {Builder}, because it specifies the content that is included in the {ExecEnvNameSing} container image.
 
-The following sections breaks down the different parts of a definition file.
+The following sections break down the different parts of a definition file.
 
 include::builder/ref-build-args-base-image.adoc[leveloffset=+1]
 //include::builder/con-ansible-config-file-path.adoc[leveloffset=+1]
