--- a/downstream/assemblies/builder/assembly-using-builder.adoc
+++ b/downstream/assemblies/builder/assembly-using-builder.adoc
@@ -6,6 +6,7 @@
 
 include::builder/con-why-builder.adoc[leveloffset=+1]
 include::builder/proc-installing-builder.adoc[leveloffset=+1]
+include::builder/ref-content-needed-for-builder.adoc[leveloffset=+1]
 include::platform/con-building-an-execution-environment-in-a-disconnected-environment.adoc[leveloffset=+1]
 include::builder/con-building-definition-file.adoc[leveloffset=+1]
 
