--- a/downstream/modules/builder/con-about-ee.adoc
+++ b/downstream/modules/builder/con-about-ee.adoc
@@ -4,8 +4,10 @@
 
 [role="_abstract"]
 
-All automation in {PlatformName} runs on container images called {ExecEnvName}.
+All automation in {PlatformName} runs on Podman container images called {ExecEnvName}.
 {ExecEnvNameStart} create a common language for communicating automation dependencies, and offer a standard way to build and distribute the automation environment.
+
+Red Hat provides supported {ExecEnvShort}s link:https://catalog.redhat.com/search?gs&q=execution%20environments&searchType=containers[here].
 
 An {ExecEnvNameSing} should contain the following:
 
@@ -14,3 +16,5 @@ An {ExecEnvNameSing} should contain the following:
 * {Runner}
 * Ansible content collections and their dependencies
 * System dependencies
+
+
