Add release notes for async-2.5-4

--- a/downstream/titles/release-notes/master.adoc
+++ b/downstream/titles/release-notes/master.adoc
@@ -29,6 +29,8 @@ include::topics/docs-25.adoc[leveloffset=+1]
 
 // == Asynchronous updates
 include::async/async-updates.adoc[leveloffset=+1]
+// Async release 2.5-4 18th Nov (was released early)
+include::async/aap-25-4-18-nov.adoc[leveloffset=+2]
 // Async release 2.5-3 (AKA event 2) 28th Oct 
 include::async/aap-25-3-28-oct.adoc[leveloffset=+2]
 // Async release 2.5-2 14th Oct
