peer review edits

--- a/downstream/modules/hub/con-offline-token-active.adoc
+++ b/downstream/modules/hub/con-offline-token-active.adoc
@@ -1,7 +1,7 @@
 
 [id="con-offline-token-active"]
 
-= Keeping your offline token active
+== Keeping your offline token active
 
 Offline tokens expire after 30 days of inactivity. You can keep your offline token from expiring by keeping it active. 
 
