--- a/downstream/modules/hub/proc-create-api-token-pah.adoc
+++ b/downstream/modules/hub/proc-create-api-token-pah.adoc
@@ -1,7 +1,7 @@
 // Module included in the following assemblies:
 // obtaining-token/master.adoc
 [id="proc-create-api-token-pah"]
-= Creating the API token in {PrivateHubName}
+== Creating the API token in {PrivateHubName}
 
 In {PrivateHubName}, you can create an API token using API token management. The API token is a secret token used to protect your content.
 
