--- a/downstream/assemblies/hub/assembly-syncing-to-cloud-repo.adoc
+++ b/downstream/assemblies/hub/assembly-syncing-to-cloud-repo.adoc
@@ -10,6 +10,9 @@ To synchronize content, you can now upload a manually-created requirements file 
 As of the 2.4 release you can still synchronize content, but synclists are deprecated, and will be removed in a future version.
 ====
 
+Each remote configuration located in {MenuACAdminRemotes} provides information for both the *community* and *rh-certified* repository about when the repository was *last updated*.
+You can add new content to {HubNameMain} at any time using the *Edit* and *Sync* features included on the {MenuACAdminRepositories} page.
+
 [discrete]
 == What's the difference between {Galaxy} and {HubNameMain}?
 
@@ -39,22 +42,11 @@ Collection namespaces must follow Python module name convention.
 This means collections should have short, all lowercase names. 
 You can use underscores in the collection name if it improves readability.
 
-include::hub/con-remote-repos.adoc[leveloffset=+1]
+// [hherbly: there's only a couple of sentences in this concept module, and they make more sense at the beginning of this assembly. Moving this content to line 13] include::hub/con-remote-repos.adoc[leveloffset=+1]
 
 // [hherbly: replacing this with the 3 modules below from the Getting started with hub guide include::hub/proc-obtaining-org-collection-url.adoc[leveloffset=+1]
 
-== Creating the API token in {HubName}
-
-Before you can interact with {HubName} by uploading or downloading collections, you must create an API token. The {HubName} API token authenticates your `ansible-galaxy` client to the Red Hat {HubName} server.
-
-Your method for creating the API token differs according to the type of {HubName} that you are using:
-
-* {HubNameStart} uses offline token management. See xref:proc-create-api-token[Creating the offline token in {HubName}].
-
-* {PrivateHubNameStart} uses API token management. See xref:proc-create-api-token-pah[Creating the API token in {PrivateHubName}].
-
-* If you are using Keycloak to authenticate your {PrivateHubName}, follow the procedure for xref:proc-create-api-token[Creating the offline token in {HubName}].
-
+include::hub/con-token-management-hub.adoc[leveloffset=+1]
 include::hub/proc-create-api-token.adoc[leveloffset=+1]
 include::hub/proc-create-api-token-pah.adoc[leveloffset=+1]
 include::hub/con-offline-token-active.adoc[leveloffset=+1]
