--- a/downstream/modules/hub/proc-create-api-token.adoc
+++ b/downstream/modules/hub/proc-create-api-token.adoc
@@ -1,7 +1,7 @@
 // Module included in the following assemblies:
 // obtaining-token/master.adoc
 [id="proc-create-api-token"]
-= Creating the offline token in {HubName}
+== Creating the offline token in {HubName}
 
 In {HubName}, you can create an offline token using *Token management*. The offline token is a secret token used to protect your content.
 
