AAP-32980-A Added updates for simultaneous running activations to Installing OCP guide

--- a/downstream/modules/platform/con-ocp-supported-install.adoc
+++ b/downstream/modules/platform/con-ocp-supported-install.adoc
@@ -32,6 +32,10 @@ If existing components have already been deployed, you must specify these compon
 * Same with {ControllerName} and {EDAName}
 |===
 
+== Modifying the number of simultaneous rulebook activations during or after {EDAcontroller} installation
+
+* If you plan to install {EDAcontroller} and run at least 12 simultaneous rulebook activations, you must add the `EDA_MAX_RUNNING_ACTIVATIONS` variable to the inventory file. See the example in 
+
 //Commenting out as upgrade is not included in EA [gmurray]
 //[NOTE]
 //====
