--- a/downstream/modules/aap-hardening/ref-aap-authentication.adoc
+++ b/downstream/modules/aap-hardening/ref-aap-authentication.adoc
@@ -3,7 +3,7 @@
 
 [id="ref-aap-authentication_{context}"]
 
-= {PlatformNameStart} authentication
+= {PlatformNameShort} authentication
 
 [role="_abstract"]
 
@@ -16,7 +16,7 @@
 * Radius
 * Azure Active Directory
 * Google OAuth
-* Genewric OIDC
+* Generic OIDC
 * Keycloak
 * GitHub single sign-on
 * GitHub
