--- a/downstream/modules/aap-hardening/ref-architecture.adoc
+++ b/downstream/modules/aap-hardening/ref-architecture.adoc
@@ -7,7 +7,7 @@
 
 [role="_abstract"]
 
-Install {PlatformNameShort} {PlaformVers} based on one of the documented tested deployment topologies defined in link:{LinkTopologies}. 
+Install {PlatformNameShort} {PlatformVers} based on one of the documented tested deployment topologies defined in link:{LinkTopologies}. 
 Enterprise organizations should use one of the enterprise topologies for production deployments to ensure the highest level of uptime, performance, and continued scalability. 
 Organizations or deployments that are resource constrained can use a "growth" topology.
 Review the Tested deployment models document to determine the topology that best suits your requirements. 
