--- a/downstream/assemblies/aap-hardening/assembly-intro-to-aap-hardening.adoc
+++ b/downstream/assemblies/aap-hardening/assembly-intro-to-aap-hardening.adoc
@@ -23,7 +23,7 @@ Hardening and compliance for {PlatformNameShort} 2.4 includes additional conside
 
 This guide takes a practical approach to hardening the {PlatformNameShort} security posture, starting with the planning and architecture phase of deployment and then covering specific guidance for installation, initial configuration, and day 2 operations. 
 As this guide specifically covers {PlatformNameShort} running on {RHEL}, hardening guidance for {RHEL} will be covered where it affects the automation platform components. 
-Additional considerations with regards to the Defense Information Systems Agency (DISA) Security Technical Implementation Guides (STIGs) for {RHEL} are provided for those organizations that integrate the DISA STIGs as a part of their overall security strategy.
+Additional considerations with regards to the DISA STIGs for {RHEL} are provided for those organizations that integrate the DISA STIGs as a part of their overall security strategy.
 
 [NOTE]
 ====
