--- a/downstream/modules/aap-hardening/con-logging-log-capture.adoc
+++ b/downstream/modules/aap-hardening/con-logging-log-capture.adoc
@@ -10,11 +10,11 @@
 Visibility and analytics is an important pillar of Enterprise Security and Zero Trust Architecture. 
 Logging is key to capturing actions and auditing. 
 You can manage logging and auditing by using the built-in audit support described in the link:{BaseURL}/red_hat_enterprise_linux/9/html/security_hardening/auditing-the-system_security-hardening[Auditing the system] section of the Security hardening for {RHEL} guide. 
-{PlatformNameStart}'s built-in logging and activity stream support {PlatformName} logs all changes within {PlatformName} and automation logs for auditing purposes. 
+{PlatformNameShort}'s built-in logging and activity stream support {PlatformName} logs all changes within {PlatformName} and automation logs for auditing purposes. 
 More detailed information is available in the link:{URLControllerAdminGuid}/assembly-controller-logging-aggregation[Logging and Aggregation] section of {TitleControllerAdminGuide}.
 
 This guide recommends that you configure {PlatformNameShort} and the underlying {RHEL} systems to collect logging and auditing centrally, rather than reviewing it on the local system. 
-{PlatformNameStart} must be configured to use external logging to compile log records from multiple components within the {PlatformNameShort} server. 
+{PlatformNameShort} must be configured to use external logging to compile log records from multiple components within the {PlatformNameShort} server. 
 The events occurring must be time-correlated to conduct accurate forensic analysis. 
 This means that the {PlatformNameShort} server must be configured with an NTP server that is also used by the logging aggregator service, as well as the targets of {PlatformNameShort}. 
 The correlation must meet certain industry tolerance requirements. 
