--- a/downstream/modules/aap-hardening/ref-sensitive-variables-install-inventory.adoc
+++ b/downstream/modules/aap-hardening/ref-sensitive-variables-install-inventory.adoc
@@ -27,8 +27,8 @@ automationhub_admin_password/hub_admin_password: <secure_hub_password>
 automationhub_pg_password/hub_pg_password: <secure_hub_db_password>
 automationedacontroller_admin_password/eda_admin_password: <secure_eda_password>
 automationedacontroller_pg_password/eda_pg_password: <secure_eda_db_password>
-/gateway_admin_password: <secure_gateway_password>
-/gateway_pg_password:<secure_gateway_db_password>
+-/gateway_admin_password: <secure_gateway_password>
+-/gateway_pg_password:<secure_gateway_db_password>
 ----
 
 Make sure these variables are not also present in the installation inventory file. To use the new Ansible vault with the installer, run it with the command `./setup.sh -e @vault.yml -- --ask-vault-pass`.
