--- a/stories/topics/proc-azure-configure-ad-sso.adoc
+++ b/stories/topics/proc-azure-configure-ad-sso.adoc
@@ -3,7 +3,7 @@
 = {MSEntraID} SSO configuration
 
 [role="_abstract"]
-Follow the procedures below to configure single sign-on (SSO) with {MSEntraID} (formally known as Azure Active Directory). If your organization does not use {MSEntraID} for application authorization, you can create users in the user management system in {PlatformNameShort}.
+Follow the procedures below to configure single sign-on (SSO) with {MSEntraID} (formerly known as Azure Active Directory). If your organization does not use {MSEntraID} for application authorization, you can create users in the user management system in {PlatformNameShort}.
 
 .Configuring the base URL for the {PlatformNameShort} deployment
 
